# JuceAudioPluginTemplate-main

./: CMakeLists.txt  Guitar_Amp_Emulation.pptx  README.md
Resources/: background_data.h
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Tests/: CMakeLists.txt  Tests.cpp
headers/: Constants.h  PluginEditor.h  PluginProcessor.h
src/: PluginEditor.cpp  PluginProcessor.cpp
